Fixed: Spacing of menu items in sidebar when screen height is less than 460

--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -47,3 +47,9 @@
     @content;
   }
 }
+
+@mixin responsiveheight($res) {
+  @media screen and (max-height: $res) {
+    @content;
+  }
+}
